; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_quarantine.c_quarantine_cleanup.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_quarantine.c_quarantine_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@config_fill = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @quarantine_cleanup(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @config_fill, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %23

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32* @tsd_quarantine_get(i32* %8)
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %23

12:                                               ; preds = %7
  %13 = load i32*, i32** %2, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @quarantine_drain(i32* %13, i32* %14, i32 0)
  %16 = load i32*, i32** %2, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @tcache_get(i32* %18, i32 0)
  %20 = call i32 @idalloctm(i32* %16, i32* %17, i32 %19, i32 1)
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @tsd_quarantine_set(i32* %21, i32* null)
  br label %23

23:                                               ; preds = %6, %12, %7
  ret void
}

declare dso_local i32* @tsd_quarantine_get(i32*) #1

declare dso_local i32 @quarantine_drain(i32*, i32*, i32) #1

declare dso_local i32 @idalloctm(i32*, i32*, i32, i32) #1

declare dso_local i32 @tcache_get(i32*, i32) #1

declare dso_local i32 @tsd_quarantine_set(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
